# armadai

./: .cz.toml  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  PRD.md  README.md  armadai.yaml  audit.toml  build.rs  docker-compose.yml  install.sh
.armadai/: PLAN-hierarchical-delegation.md  config.yaml
.githooks/: commit-msg
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml  wiki.yml
agents/: _coordinator.md  code-reviewer.md
agents/examples/: claude-cli-reviewer.md  doc-generator.md  echo-reviewer.md  gemini-reviewer.md
config/: providers.yaml  settings.yaml
docs/: PARALLEL_DELEGATION.md  ai-agent-prompt.md  unsafe-audit-2026-04-01.md
docs/design/: orchestration-plan.md  plan-a-orchestration-finitions.md  plan-b1-tui-web-enrichment.md  plan-b4-audit-review.md  plan-b5-flotte-dev.md  plan-c-orchestration-evolutions-p1.md
docs/wiki/: agent-format.md  getting-started.md  link.md  orchestration-guide.md  orchestration.md  providers.md  registry.md  skills-prompts.md  starter-packs.md  templates.md
example/: README.md
example/agents/: rust-test-writer.md  security-auditor.md
examples/: DEMO.md
examples/demo-nextjs-shop/: .env  DEMO.md  README.md  armadai.yaml  next.config.js  package.json
examples/demo-nextjs-shop/__tests__/: products.test.ts
examples/demo-rust-team/: README.md  armadai.yaml
examples/demo-rust-team/.armadai/: config.yaml
examples/demo-rust-team/agents/: doc-writer.md
examples/demo-rust-team/sample-code/: user_service.rs
schemas/: armadai.schema.json  pack.schema.json
skills/armadai-agent-authoring/: SKILL.md
skills/armadai-agent-authoring/references/: best-practices.md  examples.md  format.md  templates.md
skills/armadai-orchestration-patterns/: SKILL.md
skills/armadai-prompt-authoring/: SKILL.md
skills/armadai-prompt-authoring/references/: best-practices.md  examples.md  format.md
skills/armadai-protocol/: SKILL.md
skills/armadai-shell-config/: SKILL.md
skills/armadai-skill-authoring/: SKILL.md
skills/armadai-skill-authoring/references/: best-practices.md  examples.md  format.md
skills/armadai-starter-authoring/: SKILL.md
skills/armadai-starter-authoring/references/: best-practices.md  examples.md  format.md
skills/zsh-env-authoring/: SKILL.md
skills/zsh-env-authoring/references/: architecture.md  extending.md  ui-system.md
src/: main.rs
src/cli/: config.rs  costs.rs  fleet.rs  history.rs  init.rs  inspect.rs  link.rs  list.rs  mod.rs  models.rs  new.rs  prompts.rs  registry.rs  run.rs  setup.rs  skills.rs  unlink.rs  up.rs  update.rs  validate.rs
src/core/: agent.rs  config.rs  context.rs  coordinator.rs  embedded.rs  fleet.rs  mod.rs  model_updater.rs  pipeline.rs  project.rs  project_registry.rs  prompt.rs  skill.rs  starter.rs  task.rs
src/core/orchestration/: blackboard.rs  classifier.rs  context_injection.rs  e2e_tests.rs  gemini_integration_tests.rs  hierarchical.rs  llm_agents.rs  mod.rs  protocol.rs  ring.rs  test_helpers.rs
src/linker/: claude.rs  codex.rs  copilot.rs  gemini.rs  mod.rs  model_aliases.rs  model_resolution.rs  opencode.rs
src/model_registry/: fetch.rs  mod.rs
src/parser/: frontmatter.rs  markdown.rs  metadata.rs  mod.rs
src/providers/: cli.rs  factory.rs  mod.rs  proxy.rs  rate_limiter.rs  traits.rs
src/providers/api/: anthropic.rs  google.rs  openai.rs
src/registry/: cache.rs  convert.rs  mod.rs  search.rs  sync.rs
src/secrets/: mod.rs  sops.rs
src/shell/: app.rs  commands.rs  config.rs  detect.rs  json_runner.rs  md_render.rs  mod.rs  parser.rs  pty_runner.rs  runner.rs  session.rs  tui.rs  wizard.rs  workroom.rs
src/skills_registry/: cache.rs  mod.rs  search.rs  sync.rs
src/storage/: embedded.rs  mod.rs  queries.rs  schema.rs
src/tui/: app.rs  filter.rs  mod.rs
src/tui/views/: agent_detail.rs  costs.rs  dashboard.rs  execution.rs  history.rs  mod.rs  model_detail.rs  models_list.rs  orchestration.rs  palette.rs  prompt_detail.rs  prompts_list.rs  shortcuts.rs  skill_detail.rs  skills_list.rs  starter_detail.rs  starters_list.rs
src/tui/widgets/: agent_list.rs  cost_chart.rs  log_viewer.rs  mod.rs
src/web/: api.rs  index.html  mod.rs
starters/armadai-authoring/: pack.yaml
starters/armadai-authoring/agents/: agent-builder.md  authoring-architect.md  authoring-lead.md  authoring-reviewer.md  (+4 more)
starters/armadai-dev/: pack.yaml
starters/code-analysis-rust/: pack.yaml
starters/code-analysis-web/: pack.yaml
starters/fullstack/: pack.yaml
starters/orchestration-demo/: pack.yaml
starters/pirate-crew/: pack.yaml
starters/rust-dev/: pack.yaml
templates/: basic.md  cli-generic.md  debug.md  dev-review.md  dev-test.md  planning.md  security-review.md  tdd-green.md  tdd-red.md  tdd-refactor.md  tech-debt.md  tech-writer.md
tests/: gemini_cli_e2e.sh
(+73 files in other folders)
