[package]
name = "swarm-festai"
version = "0.1.0"
edition = "2024"
description = "AI agent fleet orchestrator - define, manage and run specialized agents from Markdown files"
license = "MIT"

[[bin]]
name = "swarm"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.29"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"

# Database
surrealdb = { version = "2", features = ["kv-mem", "kv-rocksdb"] }

# Markdown parsing
pulldown-cmark = "0.12"

# Encryption
age = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
