[package]
name = "swarm-festai"
version = "0.1.0"
edition = "2024"
description = "AI agent fleet orchestrator - define, manage and run specialized agents from Markdown files"
license = "MIT"

[[bin]]
name = "swarm"
path = "src/main.rs"

[features]
default = ["tui", "storage-rocksdb", "providers-api"]
tui = ["dep:ratatui", "dep:crossterm"]
web = ["dep:axum", "dep:tower-http"]
storage = ["dep:surrealdb"]
storage-rocksdb = ["storage", "surrealdb/kv-rocksdb"]
providers-api = ["dep:reqwest"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# TUI (optional — enable with `tui` feature)
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }

# HTTP client (optional — enable with `providers-api` feature)
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }

# HTTP server (optional — enable with `web` feature)
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"

# Database (optional — enable with `storage` or `storage-rocksdb` feature)
surrealdb = { version = "2", features = ["kv-mem"], optional = true }

# Markdown parsing
pulldown-cmark = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
