[package]
name = "armadai"
version = "0.5.1"
edition = "2024"
description = "ArmadAI — AI agent fleet orchestrator. Define, manage and run specialized agents from Markdown files."
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/Dr0drigues/swarm-festai"

[[bin]]
name = "armadai"
path = "src/main.rs"

[features]
default = ["tui", "web", "storage", "providers-api"]
tui = ["dep:ratatui", "dep:crossterm"]
web = ["dep:axum", "dep:tower-http"]
storage = ["dep:rusqlite"]
providers-api = ["dep:reqwest"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dialoguer = "0.12"

# TUI (optional — enable with `tui` feature)
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }

# HTTP client (optional — enable with `providers-api` feature)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"], optional = true }

# HTTP server (optional — enable with `web` feature)
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"

# Database (optional — enable with `storage` feature)
rusqlite = { version = "0.38", features = ["bundled"], optional = true }

# Markdown parsing
pulldown-cmark = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Embedded assets
include_dir = "0.7"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
